--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Language Learning Game</title>
+      <meta name="description" content="Master vocabulary through interactive games and daily challenges" />
+      <meta name="theme-color" content="#8B5CF6" />
+      <link rel="manifest" href="/manifest.json" />
+      <title>VocabMaster - Language Learning Game</title>
     </head>
 
     <body>
