--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <body>
       <div id="root"></div>
       <script type="module" src="/src/main.tsx"></script>
+      <script>
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('/sw.js');
+        }
+      </script>
     </body>
   </html>
   
